# mk_portfolio

./: .gitignore  Makefile  dump.rdb  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-prod.yml  deploy-staging.yml  deploy.yml
docs/: architecture.md
src/: passenger_wsgi.py  pytest.ini  run.py  start_services.sh
src/apps/authentication/api/: serializers.py  urls.py  views.py
src/apps/authentication/services/: activation.py  activation_services.py  authentication_services.py  password_reset.py  password_reset_services.py  registration.py  registration_services.py  token.py  token_services.py
src/apps/authentication/web/: urls.py  views.py
src/apps/blog/: forms.py  models.py
src/apps/certifications/: apps.py  forms.py  models.py
src/apps/education/: apps.py  forms.py  models.py
src/apps/experiences/: apps.py  forms.py  models.py
src/apps/notifications/: tasks.py
src/apps/project/: forms.py  models.py
src/apps/projects/: forms.py  models.py
src/apps/skills/: apps.py  forms.py  models.py
src/apps/techstack/: apps.py  forms.py  models.py
src/apps/tracking/: apps.py  forms.py  models.py
src/apps/userprofile/: apps.py  forms.py  models.py  signals.py
src/apps/users/: admin.py  models.py
src/config/: asgi.py  celery.py  urls.py  wsgi.py
src/config/settings/: prod.py  settings.py  test.py
src/static/css/: animations.css  index.css  responsive.css  style.css  variables.css
src/static/js/: base.js  htmx.js  load.js  main.js
src/templates/: base.html
src/templates/includes/: footer.html  messages.html  navbar.html
(+197 files in other folders)
